# tc-backend

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
.claude/skills/llm-benchmark/: SKILL.md
app/: config.py  main.py
app/api/: deps.py
app/api/middleware/: tracing.py
app/core/: synthesizer.py
app/shared/: exceptions.py  logging.py  schemas.py
config/: agents.yaml  llm_routing.yaml  planner.yaml  planner_seeds.yaml  thresholds.yaml  whitelist.yaml
config/few_shot/: sql_seed.yaml
config/prompts/: knowledge_answer.j2  log_analysis.j2  planner.j2  planner_decompose.j2  rag_answer.j2  rag_query.j2  schema_linker.j2  splunk_query.j2  sql_gen.j2  sql_refiner.j2  synthesizer.j2  synthesizer_multi.j2
config/schema/: tc_oracle.yaml
db/migrations/: 001_initial.sql  002_review_flow.sql  003_knowledge.sql
docs/: AGENT_GUIDE.md
docs/todos/: 2026-04-21.md
ppt/: post-sql-generator-flow.md  sql-generator-operation.md  tf-idf-schema-search.md
tests/: conftest.py
tests/golden/: metrics.py  runner.py  test_golden_regression.py
tests/integration/: test_db_agent_flow.py  test_orchestrator_flow.py  test_rag_flow.py  test_splunk_flow.py
tests/unit/: test_config.py  test_confluence_client.py  test_few_shot_store.py  test_knowledge_repo.py  test_model_router.py  test_oracle.py  test_pattern_analyzer.py  test_planner_confidence.py  test_planner_prefilter.py  test_prompt_renderer.py  test_reranker.py  test_schema_store.py  test_schemas.py  test_splunk_client.py  test_table_service.py  test_validator.py  test_value_store.py
(+59 files in other folders)
