[project]
name = "tc-voc-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "jinja2>=3.1",
    "sqlglot>=23",
    "aiomysql>=0.2",
    # "oracledb>=2.2",  # Oracle 이전 시 주석 해제
    "structlog>=24",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_llm: requires a live LLM endpoint (deselect with -m 'not real_llm')",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
